# identities

./: .gitignore  Makefile.am  README  configure.ac  identities.vala  rngen.vala
docs/: README
testsuites/scripts/: add_arc_after_identity  add_remove_arc  add_remove_identities  add_remove_interface  add_remove_interface_2  multi_id_arcs  script_1
testsuites/system_peer/: check_add_arc_after_identity.vala  check_add_remove_arc.vala  check_add_remove_identities.vala  check_add_remove_interface.vala  check_multi_id_arcs.vala  fake_neighborhood_signals.vala  identities_helpers.vala  identities_signals.vala  serializables.vala  system_peer.vala  task_add_remove_interface.vala  task_addarc.vala  task_addidentity.vala  task_addtag.vala  task_removearc.vala  task_removeidentity.vala
testsuites/system_peer/rpc/: module_stubs.vala  skeleton_factory.vala  stub_factory.vala
testsuites/test_identitymanager_1/: identities.vala  test_identitymanager_1.vala
